--- a/NativeSpeedo.vcxproj
+++ b/NativeSpeedo.vcxproj
@@ -7,16 +7,20 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="bootstrap.c" />
+    <ClCompile Include="keyboard.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mrubynatives.cpp" />
     <ClCompile Include="script.cpp" />
     <ClCompile Include="utils.cpp" />
+    <ClCompile Include="vendor\mruby-tiny-io\src\tinyio.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\inc\main.h" />
     <ClInclude Include="..\..\inc\enums.h" />
     <ClInclude Include="..\..\inc\natives.h" />
     <ClInclude Include="..\..\inc\types.h" />
+    <ClInclude Include="keyboard.h" />
+    <ClInclude Include="mrubynatives.h" />
     <ClInclude Include="script.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
@@ -25,7 +29,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>NativeSpeedo</RootNamespace>
     <ProjectName>NativeSpeedo</ProjectName>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -68,7 +72,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalOptions>..\..\lib\ScriptHookV.lib %(AdditionalOptions)</AdditionalOptions>
       <AdditionalLibraryDirectories>../mruby/build/x64_Debug/lib/;../mruby/build\Win32_Debug\bin</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libmruby.lib;msvcrtd.lib;vcruntimed.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libmruby.lib;msvcrtd.lib;vcruntimed.lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
